@@ -1,4 +1,7 @@
 
+Development version (next release)
+- It is now possible to set OpenCL compiler options through the env variable CLBLAST_BUILD_OPTIONS
+
 Version 0.9.0
 - Updated to version 6.0 of the CLCudaAPI C++11 OpenCL header
 - Improved performance significantly of rotated GEMV computations
